--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
                     <img src="img/logo.png" alt="Singlish to Sinhala" class="img-fluid">
                     <br><br>
                     <div class="row no-gutters">
-                        <div class="col-12 col-sm-6 col-md-8 TableText">Transliterated ( SinGlish Scheme)</div>
+                        <div class="col-12 col-sm-6 col-md-8 TableText">
+                            SinGlish (සිංග්ලිශ්) / Transliterated
+                        </div>
                         <div class="col-6 col-md-4">
-                            <button type="button" class="btn btn-outline-success" id="transliterationInfo">Show
-                                Transliteration Scheme</button>
+                            <button type="button" class="btn btn-outline-success" id="transliterationInfo">
+                                Show Transliteration Scheme
+                            </button>
                         </div>
                     </div>
                     <div class="mb-3"></div>
@@ -32,7 +35,7 @@
                         style="font-size: 12pt;" name="box1" rows="7"></textarea>
                     <input type="reset" value="Reset" class="btn btn-secondary mt-2">
                     <br>
-                    <span class="TableText">Sinhala Unicode (සිංහල යුනිකෝඩ්) </span>
+                    <span class="TableText">Sinhala Unicode (සිංහල යුනිකෝඩ්)</span>
                     <br>
                     <textarea style="font-size: 14pt; font-family: Potha, Malithi Web , Arial Unicode MS;"
                         class="form-control" name="box2" rows="7"></textarea>
