update sub title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <br><br>
                     <div class="row no-gutters">
                         <div class="col-12 col-sm-6 col-md-8 TableText">
-                            SinGlish (සිංග්ලිශ්) / Transliterated
+                            Transliterated / SinGlish (සිංග්ලිශ්)
                         </div>
                         <div class="col-6 col-md-4">
                             <button type="button" class="btn btn-outline-success" id="transliterationInfo">
