--- a/index.html
+++ b/index.html
@@ -58,12 +58,17 @@
                 <br>
                 <hr>
                 <div class="text-center">
-                    <span class="p">
-                        © 2006 Language Technology Research Laboratory - University of Colombo School of Computing
+                    <span class="p" style="color: red;">
+                        Original project made by:
+                        <a href="https://ucsc.cmb.ac.lk/ltrl/services/feconverter/t1.html" target="_blank"
+                            rel="noopener noreferrer">Language
+                            Technology Research Laboratory - University of Colombo</a>
+
                     </span>
                     <br>
-                    <span class="p" style="color: red;">
-                        Best viewed with Internet Explorer 5.x or higher in 1024 x 768 resolution.
+                    <span class="p">
+                        This is an improved version of the original project. Improvements made by
+                        <a href="https://hirusha.xyz" target="_blank" rel="noopener noreferrer">@hirushaadi</a>
                     </span>
                 </div>
                 <br>
